--- a/src/components/Statistical/DeviceRoom/DeviceRoomRow/DeviceRoomRow.css
+++ b/src/components/Statistical/DeviceRoom/DeviceRoomRow/DeviceRoomRow.css
@@ -8,5 +8,5 @@
     background-color: white;
 }
 .ButtonGroup button:hover {
-    background-color: #d8d0d0 !important;
+    color: #7b7878;
 }
